--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
   "[markdown]": {
     "editor.tabSize": 2,
     "editor.defaultFormatter": "vscode.markdown-language-features"
-  }
+  },
+  "makefile.configureOnOpen": false
 }
