--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - *
+      - "**"
 
 jobs:
   test:
@@ -15,9 +15,5 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.10
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
       - name: Test all problems
-        run: |
-          make test.all
+        run: make test.all
